--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "browser": "./node_modules/.bin/gulp script"
+    "browser": "./node_modules/.bin/gulp script",
+    "zuul-local": "zuul --local 8080 --ui mocha-bdd -- ./test/*.spec.js"
   },
   "repository": {
     "type": "git",
@@ -39,6 +40,7 @@
     "gulp-util": "^3.0.4",
     "mocha": "^2.2.1",
     "should": "^5.2.0",
-    "vinyl-source-stream2": "^0.1.1"
+    "vinyl-source-stream2": "^0.1.1",
+    "zuul": "^2.1.1"
   }
 }
