--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "mocha",
     "browser": "./node_modules/.bin/gulp script",
+    "zuul": "zuul -- ./test/*.spec.js",
     "zuul-local": "zuul --local 8080 --ui mocha-bdd -- ./test/*.spec.js"
   },
   "repository": {
