--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "mocha",
     "browser": "./node_modules/.bin/gulp script",
     "zuul": "zuul -- ./test/*.spec.js",
-    "zuul-local": "zuul --local 8080 --ui mocha-bdd -- ./test/*.spec.js"
+    "zuul-local": "zuul --local 8080 --ui mocha-bdd -- ./test/*.spec.js",
+    "istanbul-local": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && rm -rf ./coverage"
   },
   "repository": {
     "type": "git",
@@ -40,6 +41,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.4",
+    "istanbul": "^0.3.13",
     "mocha": "^2.2.1",
     "should": "^5.2.0",
     "vinyl-source-stream2": "^0.1.1",
