--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
   },
   "homepage": "https://github.com/gchudnov/inkjet",
   "dependencies": {
+    "debug": "^2.1.3",
+    "lodash": "^3.6.0",
     "webworkify": "^1.0.2"
   },
   "devDependencies": {
     "brfs": "^1.4.0",
-    "browserify": "^9.0.4",
+    "browserify": "^9.0.7",
     "gulp": "^3.8.11",
     "gulp-header": "^1.2.2",
     "gulp-load-plugins": "^0.9.0",
@@ -42,7 +44,7 @@
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.4",
     "istanbul": "^0.3.13",
-    "mocha": "^2.2.1",
+    "mocha": "^2.2.4",
     "should": "^5.2.0",
     "vinyl-source-stream2": "^0.1.1",
     "zuul": "^2.1.1"
