--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "homepage": "https://github.com/gchudnov/inkjet",
   "dependencies": {
     "debug": "^2.1.3",
-    "lodash": "^3.6.0",
+    "lodash.find": "^3.2.0",
     "webworkify": "^1.0.2"
   },
   "devDependencies": {
