--- a/package.json
+++ b/package.json
@@ -30,24 +30,24 @@
   },
   "homepage": "https://github.com/gchudnov/inkjet",
   "dependencies": {
-    "debug": "^2.1.3",
+    "debug": "^2.2.0",
     "imageinfo": "^1.0.4",
-    "lodash.find": "^3.2.0",
+    "lodash.find": "^3.2.1",
     "webworkify": "^1.0.2"
   },
   "devDependencies": {
     "brfs": "^1.4.0",
-    "browserify": "^9.0.7",
-    "gulp": "^3.8.11",
+    "browserify": "^10.2.4",
+    "gulp": "^3.9.0",
     "gulp-header": "^1.2.2",
-    "gulp-load-plugins": "^0.9.0",
+    "gulp-load-plugins": "^1.0.0-rc",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.1.0",
-    "gulp-util": "^3.0.4",
-    "istanbul": "^0.3.13",
-    "mocha": "^2.2.4",
-    "should": "^5.2.0",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.5",
+    "istanbul": "^0.3.15",
+    "mocha": "^2.2.5",
+    "should": "^6.0.3",
     "vinyl-source-stream2": "^0.1.1",
-    "zuul": "^2.1.1"
+    "zuul": "^3.0.0"
   }
 }
