--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test": "mocha",
     "browser": "gulp script",
-    "zuul": "zuul -- ./test/*.spec.js",
+    "zuul": "zuul --no-coverage -- ./test/*.spec.js",
     "zuul:local": "zuul --local 8080 --ui mocha-bdd -- ./test/*.spec.js",
-    "istanbul:local": "istanbul cover ./node_modules/mocha/bin/mocha --report lcovonly -- -R spec && rm -rf ./coverage"
+    "istanbul:local": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && rm -rf ./coverage"
   },
   "repository": {
     "type": "git",
