--- a/.zuul.yml
+++ b/.zuul.yml
@@ -2,7 +2,7 @@ ui: mocha-bdd
 browsers:
   - name: chrome
     version: latest
-  - name: edge
+  - name: microsoftedge
     version: latest
   - name: ie
     version: 10..latest
