--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "inkjet",
   "version": "2.1.0",
   "description": "JPEG-image decoding, encoding & EXIF reading library for browser and node.js",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "mocha --require register --recursive",
     "browser": "gulp script",
