--- a/babel-settings.json
+++ b/babel-settings.json
@@ -1,7 +1,4 @@
 {
   "babelrc": false,
-  "plugins": [
-    "transform-es2015-modules-commonjs",
-    ["transform-object-rest-spread", { "useBuiltIns": true }]
-  ]
+  "presets": ["env"]
 }
