--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "inkjet",
-  "version": "2.1.2",
+  "version": "3.0.0-rc0",
   "description": "JPEG-image decoding, encoding & EXIF reading library for browser and node.js",
   "main": "build/index.js",
   "scripts": {
-    "test": "mocha --require register --recursive",
+    "test": "mocha test --require @babel/register",
     "build": "babel src -d build --plugins=add-module-exports,transform-es2015-modules-commonjs",
     "browser": "gulp script",
     "browser:production": "NODE_ENV=production gulp script",
     "zuul": "zuul --no-coverage --sauce-connect -- ./test/*.spec.js",
     "zuul:local": "zuul --local 8080 --ui mocha-bdd -- ./test/*.spec.js",
-    "istanbul:local": "istanbul cover ./node_modules/mocha/bin/_mocha --require register --report lcovonly -- -R spec && rm -rf ./coverage"
+    "coverage": "nyc --reporter=lcov npm run test"
   },
   "repository": {
     "type": "git",
@@ -33,27 +33,22 @@
   "homepage": "https://github.com/gchudnov/inkjet",
   "dependencies": {
     "imageinfo": "^1.0.4",
-    "webworkify": "^1.4.0"
+    "webworkify": "^1.5.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.23.0",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.23.0",
-    "babel-preset-env": "^1.1.9",
-    "babel-register": "^6.23.0",
-    "babelify": "^7.3.0",
-    "brfs": "^1.4.3",
-    "browserify": "^14.1.0",
-    "gulp": "^3.9.1",
-    "gulp-header": "^1.8.8",
-    "gulp-if": "^2.0.2",
-    "gulp-uglify": "^2.0.1",
-    "gulp-util": "^3.0.8",
-    "istanbul": "^0.4.5",
-    "mocha": "^3.2.0",
-    "require-dir": "^0.3.1",
-    "should": "^11.2.0",
-    "vinyl-source-stream2": "^0.1.1",
-    "zuul": "^3.11.1"
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/register": "^7.11.5",
+    "babelify": "^10.0.0",
+    "brfs": "^2.0.2",
+    "browserify": "^16.5.2",
+    "gulp": "^4.0.2",
+    "gulp-header": "^2.0.9",
+    "gulp-if": "^3.0.0",
+    "gulp-uglify": "^3.0.2",
+    "mocha": "^8.1.3",
+    "nyc": "^15.1.0",
+    "should": "^13.2.3",
+    "vinyl-source-stream2": "^0.1.1"
   }
 }
