--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "mocha test --require @babel/register",
     "build": "./node_modules/.bin/babel src --out-dir build",
-    "browser": "gulp script",
-    "browser:production": "NODE_ENV=production gulp script",
+    "browser": "gulp",
+    "browser:production": "NODE_ENV=production gulp",
     "zuul": "zuul --no-coverage --sauce-connect -- ./test/*.spec.js",
     "zuul:local": "zuul --local 8080 --ui mocha-bdd -- ./test/*.spec.js",
     "coverage": "nyc --reporter=lcov --reporter=html npm run test"
@@ -40,16 +40,21 @@
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@babel/register": "^7.11.5",
+    "ansi-colors": "^4.1.1",
+    "async": "^3.2.0",
     "babelify": "^10.0.0",
     "brfs": "^2.0.2",
     "browserify": "^16.5.2",
+    "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
     "gulp-header": "^2.0.9",
     "gulp-if": "^3.0.0",
     "gulp-uglify": "^3.0.2",
     "mocha": "^8.1.3",
     "nyc": "^15.1.0",
+    "once": "^1.4.0",
     "should": "^13.2.3",
-    "vinyl-source-stream2": "^0.1.1"
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
