--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/register": "^7.11.5",
     "ansi-colors": "^4.1.1",
     "async": "^3.2.0",
+    "babel-plugin-add-module-exports": "^1.0.4",
     "babelify": "^10.0.0",
     "brfs": "^2.0.2",
     "browserify": "^16.5.2",
