--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "encode",
     "metadata"
   ],
-  "author": "Grigoriy Chudnov <g.chudnov@gmail.com> (https://github.com/gchudnov)",
+  "author": "Grigorii Chudnov <g.chudnov@gmail.com> (https://github.com/gchudnov)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/gchudnov/inkjet/issues"
